[project]
name = "cloud-saga-orchestrator"
version = "1.0.0"
description = "A highly resilient Cloud DevOps orchestrator environment for RL agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.2",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0"
]

[project.scripts]
server = "server.app:main"